--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,13 @@
     font-size: 100%;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+header {
+    font-size: xx-large;
+    background-color: var(--element-color);
+    border-radius: 5px;
+    text-align: center;
+    padding: 1rem;
+}
 body {
   background-color: var(--primary-color);
   color: var(--secondary-color);
