styles: sections and form given some room to breathe

--- a/styles.css
+++ b/styles.css
@@ -24,3 +24,10 @@ body {
   color: var(--secondary-color);
   margin: 30px; 
 }
+section {
+    margin-top: 3em;
+    display: block;
+}
+form {
+    margin-top: 0.5em;
+}
