--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,8 @@
     --primary-color: lightblue;
     --secondary-color: black;
     --element-color: darkblue;
+    --menu-dark: rgb(23, 112, 153);
+    --menu-light: rgb(1, 71, 104);
     font-size: 100%;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -28,13 +30,6 @@ section {
     margin-top: 3em;
     display: block;
 }
-form {
-    margin-top: 0.5em;
-}
-form div {
-    margin-top: 15px;
-    padding: 3px;
-}
 ul {
     list-style-type: none;
     width: 200px;
@@ -57,4 +52,18 @@ li a {
     padding: 8px 16px;
     text-decoration: none;
     text-align: center;
+}
+form {
+    margin-top: 0.5em;
+}
+form div {
+    margin-top: 15px;
+    padding: 3px;
+}
+#submit-button {
+    background-color: var(--element-color); 
+    color: var(--primary-color);
+    width: 10%;
+    margin: 30px;
+    height: 30px;
 }
